# oiio

./: .gitignore  .gitmodules  CMakeLists.txt  SConstruct  oiio.env
src/build-scripts/: hidesymbols_python.map  hidesymbols_python2.map  hidesymbols_python3.map
src/cmake/: compiler.cmake  externalpackages.cmake
src/cmake/modules/: FindBoost.cmake  FindFreetype.cmake
src/iconvert/: CMakeLists.txt
src/idiff/: CMakeLists.txt
src/igrep/: CMakeLists.txt
src/iinfo/: CMakeLists.txt
src/iv/: CMakeLists.txt
src/libOpenImageIO/: CMakeLists.txt  deepdata.cpp
src/libtexture/: imagecache.cpp
src/libutil/: fmath_test.cpp
src/maketx/: CMakeLists.txt
src/oiiotool/: CMakeLists.txt
src/python/: CMakeLists.txt  py_deepdata.cpp  py_imagebufalgo.cpp
testsuite/python-imagebufalgo/ref/: out.txt
