set (iconvert_srcs iconvert.cpp)
add_executable (iconvert ${iconvert_srcs})
set_target_properties (iconvert PROPERTIES FOLDER "Tools")
if (UNIX)
    if (APPLE)
        set_target_properties(iconvert PROPERTIES INSTALL_RPATH "@loader_path/../lib")
    else ()
        set_target_properties(iconvert PROPERTIES INSTALL_RPATH "$ORIGIN/../lib")
    endif ()
endif()
target_link_libraries (iconvert OpenImageIO ${Boost_LIBRARIES} ${CMAKE_DL_LIBS})
oiio_install_targets (iconvert)
