set (idiff_srcs idiff.cpp)
add_executable (idiff ${idiff_srcs})
set_target_properties (idiff PROPERTIES FOLDER "Tools")
if (UNIX)
    if (APPLE)
        set_target_properties(idiff PROPERTIES INSTALL_RPATH "@loader_path/../lib")
    else ()
        set_target_properties(idiff PROPERTIES INSTALL_RPATH "$ORIGIN/../lib")
    endif ()
endif()
target_link_libraries (idiff OpenImageIO ${Boost_LIBRARIES} ${CMAKE_DL_LIBS})
oiio_install_targets (idiff)
