set (igrep_srcs igrep.cpp)
add_executable (igrep ${igrep_srcs})
set_target_properties (igrep PROPERTIES FOLDER "Tools")
if (UNIX)
    if (APPLE)
        set_target_properties(igrep PROPERTIES INSTALL_RPATH "@loader_path/../lib")
    else ()
        set_target_properties(igrep PROPERTIES INSTALL_RPATH "$ORIGIN/../lib")
    endif ()
endif()
target_link_libraries (igrep OpenImageIO ${Boost_LIBRARIES} ${CMAKE_DL_LIBS})
oiio_install_targets (igrep)
