set (iinfo_srcs iinfo.cpp)
add_executable (iinfo ${iinfo_srcs})
set_target_properties (iinfo PROPERTIES FOLDER "Tools")
if (MSVC)
    set_target_properties (OpenImageIO PROPERTIES LINK_FLAGS psapi.lib)
endif (MSVC)
if (UNIX)
    if (APPLE)
        set_target_properties(iinfo PROPERTIES INSTALL_RPATH "@loader_path/../lib")
    else ()
        set_target_properties(iinfo PROPERTIES INSTALL_RPATH "$ORIGIN/../lib")
    endif ()
endif()
target_link_libraries (iinfo OpenImageIO ${Boost_LIBRARIES} ${CMAKE_DL_LIBS})
oiio_install_targets (iinfo)
