set (maketx_srcs maketx.cpp)
add_executable (maketx ${maketx_srcs})
set_target_properties (maketx PROPERTIES FOLDER "Tools")
if (UNIX)
    if (APPLE)
        set_target_properties(maketx PROPERTIES INSTALL_RPATH "@loader_path/../lib")
    else ()
        set_target_properties(maketx PROPERTIES INSTALL_RPATH "$ORIGIN/../lib")
    endif ()
endif()
target_link_libraries (maketx OpenImageIO ${Boost_LIBRARIES} ${CMAKE_DL_LIBS})
oiio_install_targets (maketx)
